[package]
name = "plymouth-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
split = true

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "rustls-tls",
    "multipart",
], default-features = false }

serde = { version = "1.0", features = [
    "derive",
] }
serde_json = "1.0"

fern = { version = "0.6", features = [
    "colored",
] }
log = { version = "0.4" }
chrono = { version = "0.4" }
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
