[package]
name = "plymouth-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
split = true

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env"] }
color-eyre = "0.6.2"
redacted_debug = "0.2.0"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
