[package]
name = "plymouth-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
split = true

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env"] }
color-eyre = "0.6.2"
futures = "0.3.28"
indicatif = "0.17.3"
redacted_debug = "0.2.0"
reqwest = { version = "0.11.17", features = ["rustls-tls", "json", "multipart"] , default-features = false}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
